Modernize lore, names, and block data access